changed resume to reflect winter quarter

--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -244,7 +244,7 @@
                 <iframe width="570" height="930" src="//invis.io/4J5SS3JMF" frameborder="0" allowfullscreen></iframe>
 
                 <p><strong>Phase 7 - Prototype Field Test Report:</strong></p>
-                <p>We ran some user tests with our mockup and made changes to our design based on the results.
+                <p>We ran some user tests with ourkak mockup and made changes to our design based on the results.
                 Originally we included both virtual realitiy and augmented reality to our design, but our user
                 tests showed that the average user had trouble differentiating how to get to one or the other on
                 our app. Also, the augmented reality feature seemed a lot more popular so we decided to narrow our
