--- a/templates/resume.html
+++ b/templates/resume.html
@@ -11,7 +11,7 @@
                 <div id="edu">
                     <p>University of Washington, Seattle WA</p>
                     <p>Bachelor of Science in Informatics</p>
-                    <p>Cumulative GPA: 3.75</p>
+                    <p>Cumulative GPA: 3.77</p>
                     <p>Expected graduation date: June 2017</p>
                 </div>
             <br>
@@ -97,7 +97,7 @@
 
                 <a href="#" tabindex="0" type="button" class="btn btn-default" data-container="body" data-trigger="focus"
                         data-toggle="popover" data-placement="top" data-html="true" title="<strong>Design Thinking</strong>"
-                        data-content="</em>Grade received: TBD</em><p>Introduces design methods for identifying user
+                        data-content="</em>Grade received: 4.0</em><p>Introduces design methods for identifying user
                         needs, devising new design concepts, prototyping these concepts, and evaluating their utility
                         and usability. Introduces the theory and practice of user-centered design. Examines methods for
                         identifying users' needs, understanding users' behaviors, envisioning and prototyping new
@@ -107,7 +107,7 @@
 
                 <a href="#" tabindex="0" type="button" class="btn btn-default" data-container="body" data-trigger="focus"
                         data-toggle="popover" data-placement="top" data-html="true" title="<strong>Information Systems Analysis and
-                        Design</strong>" data-content="</em>Grade received: TBD</em><p>Prepares students to participate
+                        Design</strong>" data-content="</em>Grade received: 3.9</em><p>Prepares students to participate
                         in structured systems analysis and design efforts. Students learn how to analyze system context,
                          behavior, and structure; identify stakeholders; gather requirements; and redesign systems to
                          make them more beneficial to the organization.</p>">INFO 380
@@ -115,7 +115,38 @@
 
                 <a href="#" tabindex="0" type="button" class="btn btn-default" data-container="body" data-trigger="focus"
                         data-toggle="popover" data-placement="top" data-html="true" title="<strong>Mobile App Design</strong>"
-                        data-content="</em>Grade received: TBD</em><p></p>">INFO 498A
+                        data-content="</em>Grade received: 3.7</em><p>In a small team, create a design language
+                        and style guide to design a mobile OS. Learned how to use Sketch to create screens for
+                        each app.</p>">INFO 498A
+                </a>
+
+                <a href="#" tabindex="0" type="button" class="btn btn-default" data-container="body" data-trigger="focus"
+                        data-toggle="popover" data-placement="top" data-html="true" title="<strong>User Experience and
+                        Information Architecture</strong>"
+                        data-content="</em>Grade received: TBD</em><p>Introduction to the methodologies utilized to create
+                        a user interface. Discusses user experience (UX), what makes an interface effective, and provides
+                         an overview of the tools and theories that are foundational to Information Architecture (IA).
+                         Discusses project scoping, wireframes, sitemaps, information design and formulating a UX
+                         strategy.</p>">INFO 330
+                </a>
+
+                <a href="#" tabindex="0" type="button" class="btn btn-default" data-container="body" data-trigger="focus"
+                       data-toggle="popover" data-placement="top" data-html="true" title="<strong>Advanced Database Design,
+                       Management, and Maintenance</strong>" data-content="</em>Grade received: TBD</em><p>Advanced
+                       perspectives on DBMS theory, architecture, and implementation. Conceptual, logical, physical
+                       modeling. Index structures, query optimization and performance tuning, relational algebra,
+                       transaction processing, and concurrency control. Operational databases, decision support systems,
+                       and data warehousing. Projects in database implementation and integration. Social implications of
+                        large distributed database systems.</p>">INFO 445
+                </a>
+
+                <a href="#" tabindex="0" type="button" class="btn btn-default" data-container="body" data-trigger="focus"
+                        data-toggle="popover" data-placement="top" data-html="true" title="<strong>Data Structures and
+                        Algorithms</strong>" data-content="</em>Grade received: TBD</em><p>Fundamental
+                       algorithms and data structures for implementation. Techniques for solving problems by programming.
+                        Linked lists, stacks, queues, directed graphs. Trees: representations, traversals. Searching
+                        (hashing, binary search trees, multiway trees). Garbage collection, memory management. Internal
+                         and external sorting.</p>">CSE 373
                 </a>
                 </div>
                     <div class="col-lg-4">
@@ -144,6 +175,7 @@
                             <li>MS Office</li>
                             <li>Visio</li>
                             <li>SQL Server</li>
+                            <li>Sketch</li>
                         </ul>
                     </div>
                 </div>
@@ -175,9 +207,14 @@
                     <li>Manage class website and send weekly e-mails</li>
                     <li>Teach/advise freshman both in class and in person to help them transition into college</li>
                 </ul>
+                <h3>INFO 200 Teaching Assistant</h3>
+                <h5>University of Washington: Spring 2016 under Dr. David Stearns</h5>
+
             <h2>Awards and Honors</h2>
                 <h4><strong>Dean's List</strong> - University of Washington</h4>
-                <p>7 quarters out of 7</p>
+                <p>8 quarters out of 8</p>
+                <h4><strong>Golden Key International Honour Society Nominee</strong></h4>
+                <p>Part of top 15% of class</p>
                 <h4><strong>Caller of the Quarter</strong> - Office of Annual Giving @ University of Washington</h4>
                 <p>Highest statistical perforamnce Fall 2014 in total money, total pledges, and total talk time.</p>
                 <h4><strong>Scholarships</strong></h4>
