--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -109,6 +109,8 @@
                 <img height="70%" src="img/ANWAC.jpg"/>
                 <img height="70%" src="img/doremefallshow-01.jpg"/>
                 <img height="70%" src="img/auditions.jpg"/>
+                <img height="70%" src="img/springauditions.jpg"/>
+
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
