updated 498 and 380 projects

--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -6,10 +6,30 @@
 
 <h3>Click a thumbnail to view project details.</h3>
 <ul class="img-list">
+
+    <li>
+        <a>
+            <img class="thumbnail" src="img/498square.jpg" />
+            <span data-toggle="modal" data-target="#AppDesignPopup" class="text-content"><span>Mobile App Design</span></span>
+        </a>
+    </li>
+
+    <li>
+        <a>
+            <img class="thumbnail" src="img/processflowsquare.jpg" />
+            <span data-toggle="modal" data-target="#ISAnalysisPopup" class="text-content"><span>Information Systems Analysis and Design</span></span>
+        </a>
+    </li>
     <li>
         <a>
             <img class="thumbnail" src="img/openhouse.png" />
             <span data-toggle="modal" data-target="#OpenHousePopup" class="text-content"><span>Interior Design Interface</span></span>
+        </a>
+    </li>
+    <li>
+        <a>
+            <img class="thumbnail" src="img/bodyguardsquare.jpg" />
+            <span data-toggle="modal" data-target="#BodyguardPopup" class="text-content"><span>Design Thinking: Designing an App</span></span>
         </a>
     </li>
     <li>
@@ -54,6 +74,7 @@
             <span data-toggle="modal" data-target="#PostersPopup" class="text-content"><span>Adobe Illustrator Posters</span></span>
         </a>
     </li>
+
 </ul>
 
 <div id="FurmataPopup" class="modal fade" role="dialog">
@@ -61,14 +82,16 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title">Furmata logo</h4>
+                <h5>Summer of 2014</h5>
             </div>
             <div class="modal-body">
                 <p>As Communication's Director of my a cappella group, Furmata A Cappella, I was given the
                     task of rebranding this past summer (2015). The logo had undergone many changes over the
                     years and our manager expressed the need for a modern design that would stick throughout the years.</p>
+                <img height="250px" src="img/logo.png"/>
                 <p>I created several designs for her to choose from using Adobe Illustrator. This is the final design,
                     and is now used on all our social media sites and merchandise.</p>
-                <img height="250px" src="img/logo.png"/>
+                <img width="90%" src="img/logotries.png" />
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -82,6 +105,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title">Dawg Coffee Website</h4>
+                <h5>October 2015</h5>
             </div>
             <div class="modal-body">
                 <p>This was one of my first assignments in INFO 343: it was an exercise that was mainly
@@ -102,6 +126,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title">Furmata Posters</h4>
+                <h5>2015-present</h5>
             </div>
             <div class="modal-body">
                 <p>As Communication's Director for my a cappella group, creating posters and Facebook banners for our concerts
@@ -119,11 +144,31 @@
     </div>
 </div>
 
+<div id="BodyguardPopup" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Design Thinking Project</h4>
+                <h5>January-March 2016</h5>
+                <h5>October 2015</h5>
+            </div>
+            <div class="modal-body">
+                <p>Under Construction!</p>
+                <img height="70%" src="img/bodg1.jpg"/>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div id="InfographicPopup" class="modal fade" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title">Chocolate Infographic</h4>
+                <h5>June 2015</h5>
             </div>
             <div class="modal-body">
                 <p>This project was for my Information Visualization class (INFO 424). We were given the freedom to pick any
@@ -132,10 +177,10 @@
                     and Excel.</p>
                 <p><a href="http://kailock.wix.com/infovis-2015">Click here</a> to see the
                     website for my infographic. Here are some of my individual displays.</p>
-                <img width="570px" src="img/number.png" />
-                <img width="570px" src="img/map.png" />
-                <img width="570px" src="img/number2.png" />
-                <img width="570px" src="img/relationship.png" />
+                <img width="90%" src="img/number.png" />
+                <img width="90%" src="img/map.png" />
+                <img width="90%" src="img/number2.png" />
+                <img width="90%" src="img/relationship.png" />
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -149,13 +194,14 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title">Police Shootings Map</h4>
+                <h5>October 2015</h5>
             </div>
             <div class="modal-body">
                 <p>This INFO 343 assignment was the first time I used a JavaScript library: for this
                     site, I used Leaflet.js . Using Leaflet and crowdsourced data on police shootings, I was able to map
                     out where these shootings had occurred in 2015 and whether or not the victim was killed.</p>
                 <p>Click the thumbnail to see the website.</p>
-                <a href="http://students.washington.edu/kailock/info343/police-shooting/"><img height="250px" src="img/shootings.jpg"/></a>
+                <a href="http://students.washington.edu/kailock/info343/police-shooting/"><img width="95%" src="img/shootings.jpg"/></a>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -169,12 +215,13 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title">Spotify API Song Search</h4>
+                <h5>November 2015</h5>
             </div>
             <div class="modal-body">
                 <p>In this INFO 343 assignment, I used Spotify's API to create a simple playlist maker. This was my first time using
                 an API and AngularJS.</p>
                 <p>Click the thumbnail to see the website.</p>
-                <a href="http://students.washington.edu/kailock/info343/spotify-template/"><img height="250px" src="img/spotify.jpg"/></a>
+                <a href="http://students.washington.edu/kailock/info343/spotify-template/"><img width="95%" src="img/spotify.jpg"/></a>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -183,11 +230,100 @@
     </div>
 </div>
 
+<div id="ISAnalysisPopup" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Junior Systems Analyst and Project Manager</h4>
+                <h5>January-March 2016</h5>
+            </div>
+            <div class="modal-body">
+                <p>Information Systems Analysis and Design involved a quarter long project where I, and a team of five other people, simulated
+                    being junior systems analysts for a real-world client.</p>
+
+                <p>The UW's Information School Curriculum Specialist was our client, and he had multiple issues with the iSchool's system of
+                    creating and updating curriculum. The two biggest problems were that there was no version control of past documents and there
+                    was no way for multiple parties to view one document at the same time. </p>
+
+                <p>With myself in the role of Project Manager, our team met several deliverables over the quarter.</p>
+
+                <p>We first created a <strong>Baseline Project Plan</strong>, which included the project's summary, key assumptions, a feasiblity assessment, a risk assessment, and a breakdown
+                    of logistics (preliminary schedule, team contact info, etc.)</p>
+
+                <p>We then performed a <strong>Current State Analysis</strong>. This included diagrams that we learned to create using Visio. We created As-Is
+                    Use Case diagrams and As-Is Process Flows, displaying the primary actors of the system and the activities that occur. We also
+                    analyzed the current IT's strengths and weaknesses, and articulated recommended next steps. </p>
+
+                <p>Finally, we performed a Future State Analysis, which included To-Be Use Case and Process Flow diagrams. We stated our
+                    recommendations and provided alternatives. Our groups solution was to trained users on how to use Sharepoint, because it was
+                    already integrated and had all the features our client needed. These features were not being taken advantage of.</p>
+
+                <img width="90%" src="img/processflow.png"/>
+
+                <p>In the end, we synthesized all our documents into a final report and presented our work. It was an awesome experience to
+                    participate with a real client and getting to practice creating some hefty documentation for our analysis. Examples of our
+                    Baseline Project Plan (BPP), Current State Analysis, and Future State Analysis are available upon request.</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="AppDesignPopup" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Mobile App Design</h4>
+                <h5>January-March 2016</h5>
+            </div>
+            <div class="modal-body">
+                <p>My mobile app design class was surprisingly one of the more difficult courses I've taken. The class was meant to reflect
+                    what it's like to work in industry on mobile app design: the process was fast paced, and it left our group floundering at times. </p>
+
+                <p>The process was split into 4 sprints.</p>
+
+                <p>In sprint 1, we were tasked to create a design language for a mobile OS. The "big idea" our team came up with was to (attempt) to
+                    design an OS that would make a phone capabable of doing as many things a computer can do. It was ambitious, and we knew we might
+                    fail, but we wanted to go for it.</p>
+
+                <p>In sprint 2, we created a styleguide and defined UI patterns for our OS. One of the aspects that our team felt made the phone
+                    inferior to the computer was speed efficiency: having a mouse and keyboard tends to make application use/switching faster.
+                    So we brainstormed gestures that we thought would be good to implement (i.e. nail taps and knuckle taps)</p>
+
+                <p>In sprint 3 we designed the dialer, contacts, photos, camera, messenger, and e-mail apps. The apps I did were photos and
+                    camera.</p>
+                <img height="70%" src="img/cam1.png"/>
+                <img height="70%" src="img/photos1.png"/>
+                <img height="70%" src="img/photos2.png"/>
+                <img height="70%" src="img/photos3.png"/>
+
+                 <p>In sprint 4, we designed the media player, notes, tasks, calendar, browser, clock and calculator apps. I designed tasks
+                    and calculator.</p>
+                <img height="70%" src="img/calc1.png"/>
+                <img width="80%" src="img/calc2.png"/>
+                <img height="70%" src="img/tasks1.png"/>
+                <img height="70%" src="img/tasks2.png"/>
+
+                 <p>Through this quarter-long project, I learned how to be proficient with Sketch and InVision. I also gained experience in working
+                    with a difficult team. Although it was challenging, I was able to rise to a leadership position and tried my best to make
+                    our project as good as it possibly could. </p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 <div id="OpenHousePopup" class="modal fade" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title">User Interface Design: Open House</h4>
+                <h5>September-December 2015</h5>
             </div>
             <div class="modal-body">
                 <p>For my Human Interface Design class (HCDE 455) I worked with 3 other students to design an interface
@@ -213,7 +349,7 @@
                 the user in envisioning furniture in their space without the furniture physically being there.</p>
 
                 <p><strong>Phase 3A - Persona:</strong></p>
-                <img width="570px" src="img/oh-persona.png" />
+                <img width="95%" src="img/oh-persona.png" />
 
                 <p><strong>Phase 3B - Storyboards:</strong> We sketched up a storyboard with our persona, Christian. The story
                 was that he wanted to incorporate a sand castle as an accent piece in his living room but his wife wasn't having
@@ -223,19 +359,19 @@
                 to solve: seeing furniture in your home without it being there. The problem presented in the story was one our
                 team wanted to include in the web version of Open House. In the end we only created the mobile version.</p>
                 <p>Here are two of the eleven scenes we drew.</p>
-                <img width="230px"src="img/2.jpg" />
-                <img width="230px" src="img/10.jpg" />
+                <img width="50%"src="img/2.jpg" />
+                <img width="50%" src="img/10.jpg" />
 
                 <p><strong>Phase 4 - Task Analysis:</strong></p>
                 <p>For this phase, we identified the user flow for three tasks in our interface.
                 We created a system map for the interface and made flow charts for each task. This is one of those
                 flowcharts, which I created with Lucidchart.</p>
-                <img width="570px" src="img/oh-flowchart.png" />
+                <img width="90%" src="img/oh-flowchart.png" />
 
                 <p><strong>Phase 5 - Flipbook Field Test Report:</strong> AKA Paper Prototype</p>
                 <p>Here's a couple pictures of some screens from our first prototype, constructed with cardstock.</p>
-                <img width="570px" src="img/prototype2.JPG" />
-                <img width="570px" src="img/prototype3.JPG" />
+                <img width="95%" src="img/prototype2.JPG" />
+                <img width="95%" src="img/prototype3.JPG" />
 
                 <p><strong>Phase 6 - Mockups:</strong></p>
                 <p>For this phase, one of our team members coded our design into a mobile app prototype.
@@ -243,7 +379,8 @@
                 camera. We included a social aspect too, letting users share their designs and follow others for
                 inspiration; we incoporated this because our user interviews reported value in others' opinions for
                 interior design.</p>
-                <iframe width="570" height="930" src="//invis.io/4J5SS3JMF" frameborder="0" allowfullscreen></iframe>
+                <!-- Prototype is "over quota" -->
+               <!--<iframe width="570" height="930" src="//invis.io/4J5SS3JMF" frameborder="0" allowfullscreen></iframe>-->
 
                 <p><strong>Phase 7 - Prototype Field Test Report:</strong></p>
                 <p>We ran some user tests with ourkak mockup and made changes to our design based on the results.
@@ -270,20 +407,21 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title">GAMER Group</h4>
+                <h5>November-December 2015</h5>
             </div>
             <div class="modal-body">
                 <p>This was my final project for Client-Side Web Development (INFO 343). It was my first time
                     working with a group on one coding project and it was also my first time working with a client.</p>
-                <img width="570px" src="img/gamer1.png" />
+                <img width="95%" src="img/gamer1.png" />
                 <p>Our client, GAMER Group, is a research group here at the University of Washington. Their current project is to create a catalogue
                 to document video games. Their intention is to be the go-to source for video game information, like how
                 IMDb is the most reputable source for movie information.</p>
                 <p>They needed a website that could be used for select people/organizations to document video games. So we
                 created this website with a large, multi-page form to submit into the database.</p>
-                <img width="570px" src="img/gamer3.png" />
+                <img width="95%" src="img/gamer3.png" />
                 <p>Users can see the video games they submitted in the past and edit their user information as well.</p>
-                <img width="570px" src="img/gamer2.png" />
-                <img width="570px" src="img/gamer2.5.png" />
+                <img width="95%" src="img/gamer2.png" />
+                <img width="95%" src="img/gamer2.5.png" />
                 <p>I did the bulk of the CSS3 styling and helped set up the multi-page architecture. This project was one of the
                 most challenging I'd worked on, because I had never coded with other people before and had never used
                 GitHub collaboratively either. Working with a client showed me how important it is to have good commmunication
